fix center align on cat index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,8 +101,8 @@ ul.profile {
   margin-left: 0px;
 }
 
-.center {
-  margin: auto;
+div.center {
+  text-align: center;
 }
 
 .posted_by {
